@@ -1,1 +1,1 @@
-char cvsdate[]="2004-06-25 14:42";
+char cvsdate[]="2004-06-30 13:15";
